Добавил два алгоритма и количество машин. Сделал сохранение в json