@@ -16,17 +16,17 @@ dependencies {
 
     implementation("org.mapstruct:mapstruct:1.6.2")
     implementation("org.projectlombok:lombok:1.18.34")
-    implementation("ch.qos.logback:logback-classic:1.4.11")
+    implementation("ch.qos.logback:logback-classic:1.4.12")
+    implementation("commons-cli:commons-cli:1.3.1")
+    implementation("com.google.code.gson:gson:2.11.0")
+
 
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
-    //testImplementation("org.mockito:mockito-inline:4.11.0")
-    //testImplementation("org.mockito:mockito-junit-jupiter:4.11.0")
     testAnnotationProcessor("org.mapstruct:mapstruct-processor:1.6.2")
     testAnnotationProcessor("org.projectlombok:lombok:1.18.34")
 }
 
 tasks.test {
     useJUnitPlatform()
-//    jvmArgs("--illegal-access=permit")
 }
